[package]
name = "nrrl-qsl"
version = "0.1.0"
authors = ["Frank Andrew Stevenson"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
serde = { version = "1.0.105" , features = ["derive"] }
dialog = "0.3.0"
